[tool.poetry]
name = "multi-disk-tester"
version = "0.0.1"
description = "DESTRUCTIVE (only!) multi-disk testing for new disks"
authors = ["Justin Clift <justin@postgresql.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
python-rapidjson = "^1.20"
ruff = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
